--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/node": "^13.13.4",
     "ts-node-dev": "^1.0.0-pre.44",
@@ -18,6 +19,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "pg": "^8.0.3",
